--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install PyGObject
+      run: sudo apt-get install -y python3-gi python3-gi-cairo
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
