--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install PyGObject
-      run: sudo apt-get install -y python3-gi python3-gi-cairo
+      run: sudo apt-get install -y python3-gi python3-gi-cairo libcairo2-dev libgirepository1.0-dev
 
     - name: Install dependencies
       run: |
