--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -37,6 +37,24 @@ jobs:
     - name: Build Windows
       run: |
         briefcase package
+              - uses: actions/checkout@v2.1.0
+    - uses: jitterbit/get-changed-files@v1
+      id: abc
+      with:
+          format: space-delimited
+          token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Printing
+      run: |
+          echo "Added:"
+          echo "${{ steps.abc.outputs.added }}"
+          echo "Removed:"
+          echo "${{ steps.abc.outputs.removed }}"
+          echo "Renamed:"
+          echo "${{ steps.abc.outputs.renamed }}"
+          echo "Modified:"
+          echo "${{ steps.abc.outputs.modified }}"
+          echo "Added+Modified:"
+          echo "${{ steps.abc.outputs.added_modified }}"
     - name: List Files
       id: list-files
       uses: mirko-felice/list-files-action@v3.0.1
