--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,10 +4,8 @@
 name: Android
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  release:
+    types: published
 
 permissions:
   contents: read
